--- a/index.html
+++ b/index.html
@@ -9,14 +9,10 @@
 <body>
     <header><h1>Grid project</h1></header>
     <section class="grid-container">
-       <article></article>
-       <article><h1>Supervisor</h1></article>
-       <article>3</article>
-       <article>4</article>
-       <article>5</article>
-       <article>6</article>
-       <article>7</article>
-       <article>8</article>
+       <article class="haszn"><p>Supervisor</p><img src="images/icon-team-builder.svg" alt=""></article>
+       <article class="haszn"><p>Team Builder</p><img src="images/icon-supervisor.svg" alt=""></article>
+       <article class="haszn"><p>Karma</p><img src="images/icon-calculator.svg" alt=""></article>
+       <article class="haszn"><p>Calculator</p> <img src="images/icon-karma.svg" alt=""> </article>
     </section>
 </body>
 </html>
